# TDS_Project1

./: .gitignore  Dockerfile  LICENSE  ProjectStatement.md  main.py  package-lock.json  pyproject.toml
